<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>


    <!--9 спринт, добавление строковых ресурсов-->

    <string name="addressYandex">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="choose_sharing_method">Выберите метод отправки/</string>

    <string name="mailSupport">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="TextSupport">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="myEmail">Student@mail.com</string>

    <string name="offer">https://yandex.ru/legal/practicum_offer/</string>

    <string name="editTextHint">Поиск</string>

    <!--10 спринт, добавление строковых ресурсов-->

    <string name="TrackName">TrackName</string>
    <string name="ArtistName">Artist</string>
    <string name="TrackTime">00:00</string>

    <!--11 спринт, добавление строковых ресурсов-->
    <string name="update">Обновить</string>
    <string name="errornetTextView">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="errorsearchTextView">Ничего не нашлось</string>

    <!--12 спринт, добавление строковых ресурсов-->
    <string name="youSearch">Вы искали</string>
    <string name="clearHistory">Очистить историю</string>

    <!--13 спринт, добавление строковых ресурсов-->
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="releaseYear">Год</string>
    <string name="albom">Альбом</string>
    <string name="trackTime">Длительность</string>
    <string name="listenTime">00:00</string>
    <string name="trackName">Название трека</string>
    <string name="artistName">Название группы</string>

</resources>