<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainbackground"
    android:orientation="vertical"
    android:paddingLeft="@dimen/pad16"
    android:paddingRight="@dimen/pad16"
    android:paddingBottom="48dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextViewStyle"
        android:text="@string/app_name"
        />
    <Button
        android:id="@+id/search"
        style="@style/MainButtonStyle"
        android:text="@string/search"
        app:icon="@drawable/serch"
                         />
    <Button
        android:id="@+id/media_button"
        style="@style/MainButtonStyle"
        app:icon="@drawable/media"
        android:text="@string/media"/>


    <Button
        android:id="@+id/settings_button"
        style="@style/MainButtonStyle"
        app:icon="@drawable/settings"
        android:text="@string/settings"                />
</LinearLayout>