<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/back_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_arrow"
            android:padding="@dimen/pad16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_22"
            android:layout_marginStart="8dp"
            />
    </LinearLayout>

       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="24dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            android:paddingTop="@dimen/pad21"
            android:paddingBottom="@dimen/pad21"
            android:paddingEnd="8dp"
            android:paddingStart="@dimen/pad16"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="6dp"
            android:thumbTint="@color/switch_thumb_color"
            android:trackTint="@color/switch_track_color"/>
            tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            android:paddingTop="21dp"
            android:paddingBottom="21dp"
            android:paddingStart="16dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share"
            android:paddingEnd="12dp"/>
    </LinearLayout>

       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            android:paddingTop="21dp"
            android:paddingBottom="21dp"
            android:paddingStart="16dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/support"
            android:paddingEnd="12dp"/>
    </LinearLayout>

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            android:paddingTop="21dp"
            android:paddingBottom="21dp"
            android:paddingStart="16dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/useragreement"
            android:paddingEnd="12dp"/>
    </LinearLayout>

</LinearLayout>
