<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="61dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    >
    <ImageView
        android:id="@+id/trackImage"
        android:layout_width="@dimen/pad48"
        android:layout_height="@dimen/pad48"
        android:paddingLeft="12dp"
        tools:src="@drawable/placeholder" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <TextView
            android:id="@+id/trackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:textColor="@color/settings"
            android:textFontWeight="400"
            android:textSize="@dimen/text_size_16"
            tools:text="@string/TrackName" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/trackArtist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/ys_display_regular"
                android:maxLines="1"
                android:textColor="@color/trackcolor"
                android:textFontWeight="400"
                android:textSize="@dimen/text_size_11"
                tools:text="@string/ArtistName" />
            <View
                android:layout_width="3dp"
                android:layout_height="3dp"
                android:background="@drawable/ellipse"
                android:layout_marginHorizontal="5dp"
                />
            <TextView
                android:id="@+id/trackTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ys_display_regular"
                android:textColor="@color/trackcolor"
                android:textSize="@dimen/text_size_11"
                tools:text="@string/TrackTime" />
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrowsing"
        app:tint="@color/trackcolor"
        android:paddingEnd="12dp"/>
</LinearLayout>

